--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -127,7 +127,7 @@
   * {
     @apply border-border outline-ring/50;
   }
-  
+
   body {
     @apply bg-background text-foreground;
   }
@@ -153,7 +153,7 @@
   from {
     transform: translateX(0);
   }
-  
+
   to {
     transform: translateX(-100%);
   }
@@ -165,32 +165,23 @@
 
 .modalContainer {
   height: 350px;
-  width: 600px;
+  width: 400px;
   display: flex;
   align-items: center;
   justify-content: center;
   position: absolute;
+  overflow: hidden;
+  top: 20rem;
+  left: 28rem;
+  /* pointer-events: none; */
 }
 
 .modalSlider {
-  /* overflow: hidden; */
-  /* z-index: .44; */
   height: 100%;
   width: 100%;
-  position: absolute;
-  transition: top 0.5s cubic-bezier(0.76, 0, 0.24,1);
-  /* overflow: hidden; */
+  transition: top 0.5s cubic-bezier(0.76, 0, 0.24, 1);
 }
 
-.modal {
-  position: relative;
-  /* top: 13rem;
-  right:-18rem; */
-  height: 100%;
-  display: flex;
-  justify-items: center;
-  align-items: center;
-}
 
 .modal img {
   height: auto;
